Fixing butterfly cache

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -48,5 +48,5 @@
 </footer>
 
 <div class="floating-butterfly" aria-hidden="true">
-  <img src="/assets/img/ui/hero-butterfly.svg" alt="">
+  <img src="/assets/img/ui/hero-butterfly.svg?v=2" alt="">
 </div>
