Twitter and LinkedIn links added to footer

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -44,13 +44,10 @@
           LinkedIn
         </a>
 
-        <!--
-        <a href="https://twitter.com/TheButterflyL8" target="_blank" rel="noopener">
+        <a href="https://x.com/butterflylayer" target="_blank" rel="noopener">
           Twitter
         </a>
-        -->
       </div>
-
       <p class="copyright">
         © <span data-year></span> L8 — The Butterfly Layer. All rights reserved.
       </p>
