--- a/partials/footer.html
+++ b/partials/footer.html
@@ -58,5 +58,5 @@
 </footer>
 
 <div class="floating-butterfly" aria-hidden="true">
-  <img src="/assets/img/ui/hero-butterfly.svg?v=2" alt="">
+  <img src="/assets/img/ui/hero-butterfly-wow.svg" alt="">
 </div>
